unpackaged/main/default/objects/Box_OAuth__c/Box_OAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores each user's authentication token for Box</description>
    <label>Box OAuth</label>
</CustomObject>