unpackaged/main/default/objects/Box_OAuth__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <description>The User's Auth Token</description>
    <label>Auth Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>