unpackaged/main/default/objects/Box_OAuth__c/fields/AuthTokenExpires__c.field-meta.xml
<CustomField>
    <fullName>AuthTokenExpires__c</fullName>
    <description>Date/Time the auth token expires. If expired and the refresh token is still valid, then a refresh will be needed to get a new auth token.</description>
    <label>Auth Token Expires</label>
    <type>DateTime</type>
</CustomField>