unpackaged/main/default/objects/Box_OAuth__c/fields/RefreshTokenExpires__c.field-meta.xml
<CustomField>
    <fullName>RefreshTokenExpires__c</fullName>
    <description>Date / Time the Refresh Token expires. If expired, then the user will need to reauthenticate with Box.</description>
    <label>Refresh Token Expires</label>
    <type>DateTime</type>
</CustomField>