unpackaged/main/default/objects/Box_OAuth__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>NAME</columns>
    <columns>Auth_Token__c</columns>
    <columns>AuthTokenExpires__c</columns>
    <columns>Refresh_Token__c</columns>
    <columns>RefreshTokenExpires__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>